포트폴리오 이름 추가

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,6 +10,9 @@
                 </div>
             </div>
             <img src="{{ site.baseurl }}/{{ item.img }}" class="" alt="">
+            <div style = "text-align:center">
+            <strong>{{ item.title }}</strong>
+            </div>
         </a>
     </div>
     {% endfor %}
