--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
   <div class="posts">
     {% for post in paginator.posts %}
     <div class="post-teaser">
-      {% if post.thumbnail %} 
+      {% if post.thumbnail %}
       <div class="post-img">
          <img src="{{ site.baseurl }}/{{ post.thumbnail }}">
       </div>
@@ -23,7 +23,9 @@ layout: default
             <h1>
               <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
                 {{ post.title }}
+                <script id="dsq-count-scr" src="//https-jiseobkim-github-io.disqus.com/count.js" async></script>
               </a>
+
             </h1>
             <p class="meta">
               {{ post.date | date: "%B %-d, %Y" }}
@@ -40,6 +42,7 @@ layout: default
     </div>
     {% endfor %}
   </div>
+
 
   {% if paginator.total_pages > 1 %}
   <div class="pagination">
