--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -23,8 +23,8 @@ $selection-color: #D4D4D4; // visible when highlighting text
 $blockquote-color: #EEF7FA; // $background-color;
 
 //Search color
-$link-shadow: transparentize($link-color, .6); //rgba(26, 188, 156, 0.6);
-$text-shadow: #3f3f3f;
+$link-shadow: transparentize($link-color, 0.8); //rgba(26, 188, 156, 0.6);
+$text-shadow: #333333;
 $search-color: #999;
 
 // Header colours
@@ -68,8 +68,3 @@ $base0c: #89DDFF !default;  // Support, Regular Expressions, Escape Characters, 
 $base0d: #82AAFF !default;  // Functions, Methods, Attribute IDs, Headings
 $base0e: #C792EA !default;  // Keywords, Storage, Selector, Markup Italic, Diff Changed
 $base0f: #FF5370 !default;  // Deprecated, Opening/Closing Embedded Language Tags e.g.
-
-
-
-
-
