--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -24,7 +24,7 @@ $blockquote-color: #EEF7FA; // $background-color;
 
 //Search color
 $link-shadow: transparentize($link-color, 0.8); //rgba(26, 188, 156, 0.6);
-$text-shadow: #333333;
+$text-shadow: #1f1f1f;
 $search-color: #999;
 
 // Header colours
