--- a/_includes/Aboutme.html
+++ b/_includes/Aboutme.html
@@ -1,22 +1,21 @@
 <div class="sidebar-module about">
-  <h4>{{ site.locales[site.default_locale].Aboutme }}</h4>
+  <h2>{{ site.locales[site.default_locale].Aboutme }}</h2>
   <img title="{{site.author}}" src="{{site.aboutme_photo}}" alt="{{site.author}}"/>
+  <br>
   <span>{{site.aboutme}}</span>
   <br />
 
   {% if site.ShowContactInfo == "True" %}
 
-  Contact:
+  Contact Me Via: <br />
 
   {% if site.email != empty %}
-  <a href="mailto:{{site.email}}" title="mailto: {{site.email}}">Email</a> /
+  <a href="mailto:{{site.email}}" title="mailto: {{site.email}}"><i class="fa fa-envelope-square fa-3x"></i></a>&nbsp;
   {% endif %}
   {% if site.github_username != empty %}
-  <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}">Github</a> /
+  <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}"><i class="fa fa-github-square fa-3x"></i></a>&nbsp;
   {% endif %}
-  {% if site.twitter_username != empty %}
-  <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}">Twitter</a>
-  {% endif %}
+
 
   {% endif %}
 
